# INCEPT.sh

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  nl-linux-command-compiler-small.md  pyproject.toml
.github/workflows/: ci.yml
Sprints/: BACKLOG.md  SPRINT-1.md  SPRINT-2.md  SPRINT-3.md  SPRINT-4.md  SPRINT-5.md  SPRINT-6.md  SPRINT-7.md  SPRINT-OVERVIEW.md
configs/: training_intent.yaml  training_slot.yaml
data/adversarial/: adversarial_examples.jsonl
data/assembled/: stats.json  test.jsonl  train.jsonl  val.jsonl
data/paraphrases/: paraphrase_examples.jsonl
data/training/: dpo_pairs.jsonl  intent_train.jsonl
docs/: api.md  config-reference.md  deployment.md  intent-catalog.md  operations.md  production-checklist.md  security.md  troubleshooting.md
golden_tests/: golden_v1.jsonl
incept/: __init__.py
incept/cli/: __init__.py  __main__.py  actions.py  banner.py  commands.py  completer.py  main.py  repl.py
incept/compiler/: __init__.py  composition.py  file_ops.py  flags.py  quoting.py  router.py  system_ops.py  (+1 more)
scripts/: test_100_questions.py
tests/: test_adversarial.py  test_assembler.py  test_cli_main.py  test_cli_oneshot.py  test_cli_repl.py  test_compilers_file_text.py  test_compilers_system.py  test_confidence.py  test_context.py  test_converter.py  test_data_generator.py  test_data_pipeline.py  test_decomposer.py  test_eval_metrics.py  test_eval_report.py  test_export.py  test_forum_miner.py  test_golden.py  test_grammars.py  test_intent_eval.py  test_paraphraser.py  test_pipeline.py  test_preclassifier.py  test_quoting.py  test_retrieval.py  test_schemas.py  test_server_config.py  test_server_health.py  test_sft_trainer.py  test_slot_eval.py  test_training_config.py  test_validator.py
(+136 files in other folders)
